# vman3_dq

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: test.py
vman3/: __init__.py  core.py
vman3/data/: cleaned_data.csv  dictionary.csv  sample_data.csv  sample_data2.csv
vman3_dq/: core.py  core_bkp.py
vman_dq/: __init__.py  core.py
