# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vman3"
version = "0.2"
authors = [
    {name = "Isaac Lyatuu", email = "ilyatuu@gmail.com"},
]
description = "VMan3 Data Processing Toolkit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vman-tool/vman3"